--- a/css/style.css
+++ b/css/style.css
@@ -42,7 +42,7 @@ address {
 }
 
 button{cursor: pointer;
-background: #4d5ae5;}
+}
 
 
 
@@ -210,7 +210,7 @@ border-block-start: 48px;
             background-color:#4d5ae5;
             margin: 0 auto;
             transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
+background: #4d5ae5;
        }
 
     
@@ -502,3 +502,202 @@ align-items: baseline;}
         .icon-href-footer:focus{background-color: #31d0aa;}
         
                 .icon-footer {fill:#f4f4fd};
+
+
+
+.container {}
+
+.backdrop {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(46, 47, 66, 0.4);
+    
+}
+
+
+.modal {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border-radius: 4px;
+    width: 408px;
+    height: 584px;
+    box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12), 0 2px 1px 0 rgba(0, 0, 0, 0.2);
+    background: #FCFCFC;
+    padding-left: 24px;
+    padding-right: 24px;
+    justify-content: center;
+    align-items: center;
+   
+    
+}
+
+.modal-btn-x{position: absolute;
+    
+    border-radius: 50%;
+    width: 24px;
+    height: 24px;
+right: 22px;
+top: 15px;
+border: none;
+display: block;
+
+    margin: 0 auto;
+    background: #E7E9FC;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-btn-x:hover,
+.modal-btn-x:focus
+ {background-color: #404BBF;
+    
+}
+
+
+.icon-x{display: flex;
+    fill:#2E2F42;
+    
+    margin: 0 auto;
+    
+    
+
+}
+
+.text-modal{
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 150%;
+    letter-spacing: 0.02em;
+    text-align: center;
+    color: #2e2f42;
+padding-top: 72px;
+margin-bottom: 16px;
+}
+
+.modal-field{margin-bottom: 8px;}
+
+
+.modal-input{width: 100%;
+
+border: 1px solid rgba(46, 47, 66, 0.4);
+    border-radius: 4px;
+    height: 40px;
+background-color: transparent;
+outline: transparent;
+transition: fiil 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-input:focus{border-color:#4D5AE5;}
+
+.modal-input:focus + .modal-icon {
+    fill: #4D5AE5;
+}
+
+
+
+.input-coment-modal{width: 360px;
+    height: 138px;
+border: 1px solid rgba(46, 47, 66, 0.4);
+    border-radius: 4px;
+background-color: transparent;
+outline: transparent;
+resize: none;
+margin-bottom: 16px;
+transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);}
+
+.input-coment-modal:focus {border-color: #4D5AE5;}
+
+
+
+.input-coment-modal::placeholder{
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 117%;
+    letter-spacing: 0.04em;
+    color: rgba(46, 47, 66, 0.4);
+position: absolute;
+    top: 0;
+    left: 0;
+padding-top: 8px;
+padding-left: 16px;
+}
+
+.modal-label{
+    font-size: 12px;
+        line-height: 117%;
+        letter-spacing: 0.04em;
+        color: #8e8f99;
+        display: block;
+        margin-bottom: 4px;
+        
+
+}
+
+.modal-icon{fill: #2E2F42;
+    position: absolute;
+    left: 24px;
+    top: 50%;
+    transform: translateY(-50%);
+    transition: fiil 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    
+}
+
+.modal-input-wrapp{position: relative;}
+
+
+.btn-modal-send{border-radius: 4px;
+    padding: 16px 32px;
+    width: 169px;
+    height: 56px;
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+        background: #4d5ae5;
+        display: flex;
+            align-items: center;
+            justify-content: center;
+            flex-direction: row;
+            color: #fff;
+                font-weight: 500;
+                font-size: 16px;
+                line-height: 150%;
+                letter-spacing: 0.04em;
+                margin: 0 auto;}
+
+
+
+.check-text {font-size: 12px;
+    line-height: 117%;
+    letter-spacing: 0.04em;
+    color: #8e8f99;
+    display: flex;
+    align-items: center;
+}
+
+.check-link {text-decoration: underline;
+    text-decoration-skip-ink: none;
+color: #4d5ae5;}
+
+
+
+.check-check{position: relative;
+    width: 16px;
+height: 16px;
+border-radius: 2px;
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    margin-right: 8px;
+    display: flex;
+fill: transparent;
+}
+
+.modal-check:checked+.check-text span {background-color: #404BBF;
+border: none;}
+
+.modal-check-icon {position: absolute;
+top: 50%;
+left: 50%;
+transform: translate(-50%, -50%);
+fill: #f4f4fd;
+}
