--- a/css/style.css
+++ b/css/style.css
@@ -300,8 +300,7 @@ width: calc((100% - 72px) / 4);
 border-radius: 0px 0px 4px 4px;
 box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
 }
-.container-icon-social{}
-.team-img { }
+
 .container-team{padding: 32px 0;}
 
 .icon-list {display: flex;
@@ -383,8 +382,7 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);}
             transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
  }
     
-        .portfolio-img {}
-    
+       
         .portfolio-title { 
                 font-weight: 500;
                 font-size: 20px;
@@ -446,6 +444,7 @@ align-items: baseline;}
             margin-bottom: 16px;
 
             }
+            .footer-container-icon{margin-right: 80px;}
 
         .footer-web {color: #f4f4fd; 
         }
@@ -464,9 +463,10 @@ align-items: baseline;}
 
                 .container-footer-logo{margin-right: 120px;}
 
-        .footer-container-icon{
-        
 
+
+        }
+       
         }
 
 
@@ -503,14 +503,7 @@ align-items: baseline;}
         
                 .icon-footer {fill:#f4f4fd};
 
-.container-input{display: flex;
-}
 
-                
-
-
-
-.container {}
 
 .backdrop {
     position: fixed;
