--- a/css/style.css
+++ b/css/style.css
@@ -587,7 +587,7 @@ button {
   pointer-events: auto;
 }
 
-.modal {
+.modal {margin-bottom: 8px;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -615,7 +615,6 @@ button {
   right: 22px;
   top: 15px;
   border: none;
-  display: block;
   right: 24px;
   margin: 0 auto;
   background: #e7e9fc;
@@ -629,12 +628,18 @@ button {
 .modal-btn-x:hover {
   background-color: #404bbf;
   border: none;
+  fill: #ffffff;
+}
+.modal-btn-x:focus {
+  background-color: #404bbf;
+  border: none;
+  fill: #ffffff;
 }
 
 .icon-x {
   display: flex;
   fill: #2e2f42;
-
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   margin: 0 auto;
 }
 
@@ -650,8 +655,10 @@ button {
 }
 
 .modal-field {
-  margin-bottom: 16px;
+margin-bottom: 16px;
 }
+
+.modal-checkbox{margin-bottom: 24px;}
 
 .modal-input {
   width: 100%;
@@ -770,6 +777,7 @@ button {
   text-decoration-skip-ink: none;
   color: #4d5ae5;
 }
+
 
 .check-check {
   position: relative;
